--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ table {
 /*mobile styles*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Molle&display=swap');
-body{
-    font-family:'Montserrat', sans-serif;
 
+p{
+    font-family: 'Montserrat', sans-serif;
 }
