--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,9 @@ table {
 /*mobile styles*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Molle&display=swap');
-
+body{
+    width: 428px;
+}
 p{
     font-family: 'Montserrat', sans-serif;
 }
