--- a/styles.css
+++ b/styles.css
@@ -52,13 +52,13 @@ table {
 /*mobile styles*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Molle&display=swap');
+
+body{
+    font-family: 'Molle', cursive;
+}
 header{
     background-color: #55BCD5;
 }
 p{
     font-family: 'Montserrat', sans-serif;
-}
-
-h1{
-    font-family: 'Molle', cursive;
 }
