--- a/styles.css
+++ b/styles.css
@@ -76,11 +76,34 @@ width:auto;
 height:auto;
 }
 
+
 p{
     font-family: 'Montserrat', sans-serif;
 }
-
-nav{
+#menu-toggle {
+    display: block;
+    position: relative;
+    top: 50px;
+    left: 50px;  
+    z-index: 1;  
+    -webkit-user-select: none;
+    -moz-user-select: none;
+     -ms-user-select: none;
+         user-select: none;
+  }
+  
+  #menu-toggle a {
+    text-decoration: none;
+    color: #232323;
+    -webkit-transition: color 0.3s ease;
+    -o-transition: color 0.3s ease;
+    transition: color 0.3s ease;
+  }
+  
+  #menu-toggle a:hover {
+    color: #4f7794;
+  }
+ #menu-toggle ul1{
     position: absolute;
     width: 300px;
     margin: -100px 0 0 -50px;
@@ -94,24 +117,20 @@ nav{
     -o-transition: left 0.3s ease;
     transition: left 0.3s ease; 
 }
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    background-color: #f1f1f1;
+#menu-toggle li {
+    padding: 10px 0;
+    font-size: 22px;
   }
-  
-  li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
-  }
+
   #menu-toggle input:checked ~ ul {
     left: 0;
   }
   
-.sr-only{
-    visibility: hidden;
-}
+  .sr-only {
+    position:absolute;
+    left:-10000px;
+    top:auto;
+    width:1px;
+    height:1px;
+    overflow:hidden;
+    }
