--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,28 @@ height:auto;
 p{
     font-family: 'Montserrat', sans-serif;
 }
+#menu-toggle input {
+    display: block;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: -7px;
+    left: -5px;  
+    padding: 0;
+    cursor: pointer;  
+    opacity: 0; /* hide this */
+    z-index: 2; /* and place it over the hamburger */  
+    -webkit-touch-callout: none;
+  }
+  #menu-toggle label {
+    position: relative;
+    display: block;
+    width: 30px;
+    height: 30px;
+  }
+  #menu-toggle label span {
+    display: none;
+  }
 #menu-toggle {
     display: block;
     position: relative;
@@ -103,7 +125,7 @@ p{
   #menu-toggle a:hover {
     color: #4f7794;
   }
- #menu-toggle ul1{
+ #menu-toggle ul{
     position: absolute;
     width: 300px;
     margin: -100px 0 0 -50px;
@@ -112,7 +134,7 @@ p{
     background: #ededed;
     list-style-type: none;
     /* Hide the menu off-screen to the left */
-    left: -100%;
+    right: -100%;
     -webkit-transition: left 0.3s ease;
     -o-transition: left 0.3s ease;
     transition: left 0.3s ease; 
