--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-/*  Author: Jonathan Alvarez */
+/*  Author: Jonathan Alvarez 
+    github link: https://jalva129.github.io/wunderlust/wunderlust-majorca.html*/
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
