--- a/styles.css
+++ b/styles.css
@@ -62,8 +62,14 @@ header{
   background: rgb(255,255,255);
   background: linear-gradient(0deg, rgba(255,255,255,1) 25%, rgba(85,188,213,1) 75%);
 }
+#logo{
+  width: 50%;
+  height: 50%;
+  padding: 5px;
+}
 h1{
   font-size: 40px;
+  padding: 5px;
 }
 #skip {
 position:absolute;
@@ -83,7 +89,7 @@ height:auto;
 
 p{
     font-family: 'Montserrat', sans-serif;
-    line-height: 1.6;
+    line-height: 2;
 }
 #menu-toggle input {
     display: block;
@@ -101,12 +107,11 @@ p{
   #menu-toggle label {
     background-color: #F6D64A;
     padding: 20px 15px;
-    position: relative;
+    position: absolute;
     top: 30px;
     right: 50px;
     display: block;
-    width: 30px;
-    height: 30px;
+    
   }
   #menu-toggle label span {
     color: black;
