--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,7 @@ p{
     margin: -100px 0 0 -50px;
     padding: 50px;
     align-content: center;
-    background: #499BD2;
+    background: #55BCD5;
     list-style-type: none;
     border: 2px solid #000;
     /* Hide the menu off-screen to the left */
